Fix tooltip position bug

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
 <body>
   <a id="demo_render">Render</a>
   <div id="demo_rendered" style="height: 350px;"></div>
-  <input type="text" id="demo_input" style="height: 38px;">
+  <input type="text" id="demo_input" style="margin-left: 500px; height: 38px;">
 
   <script>
     emojiver.init(document.getElementById('demo_input'), {
